--- a/client/src/app/users/list.component.pug
+++ b/client/src/app/users/list.component.pug
@@ -4,21 +4,37 @@ am-spinner(*ngIf="isLoading")
 .container.user-list(*ngIf="!isLoading")
   h2 Users
   a.btn.btn-primary(routerLink="/users/new") New User
-  table.table.table-striped.users
-    thead
-      tr
-        th.id(scope="col") #
-        th(scope="col") Name
-        th(scope="col") Email
-        th.actions(scope="col")
-    tbody
-      tr(*ngFor="let user of users")
-        td {{ user.userId }}
-        td {{ user.name }}
-        td {{ user.email }}
-        td.actions
-          button.btn.btn-info.btn-sm(title="View" '(click)'="userDetails(user)" '[disabled]'="isSaving") View
-          button.btn.btn-warning.btn-sm(title="Edit" '(click)'="editUser(user)" '[disabled]'="isSaving") Edit
-          button.btn.btn-danger.btn-sm(title="Delete" '(click)'="deleteUser(user)" '[disabled]'="isSaving") Delete
-      tr(*ngIf="users.length === 0")
-        td.text-center(colspan="5") No users
+  .table-responsive
+    table.table.table-striped.users
+      thead
+        tr
+          th.id(scope="col") #
+          th(scope="col") Name
+          th(scope="col") Email
+          th.actions(scope="col")
+      tbody
+        tr(*ngFor="let user of users")
+          td {{ user.userId }}
+          td {{ user.name }}
+          td {{ user.email }}
+          td.actions
+            button.btn.btn-info.btn-sm(
+              type="button"
+              title="View"
+              '(click)'="userDetails(user)"
+              '[disabled]'="isSaving"
+            ) View
+            button.btn.btn-warning.btn-sm(
+              type="button"
+              title="Edit"
+              '(click)'="editUser(user)"
+              '[disabled]'="isSaving"
+            ) Edit
+            button.btn.btn-danger.btn-sm(
+              type="button"
+              title="Delete"
+              '(click)'="deleteUser(user)"
+              '[disabled]'="isSaving"
+            ) Delete
+        tr(*ngIf="users.length === 0")
+          td.text-center(colspan="4") No users
