replace spinkit to bootstrap loader

--- a/client/src/public/index.pug
+++ b/client/src/public/index.pug
@@ -6,4 +6,8 @@ html(lang="en")
     title MEAN Starter
     base(href="/")
   body
-    am-app Loading...
+    am-app
+      .mb-3
+      .text-center
+        h3 Loading...
+        .spinner-border(role="status")
