--- a/client/src/app/_shared/spinner.component.pug
+++ b/client/src/app/_shared/spinner.component.pug
@@ -1,4 +1,2 @@
-.sk-three-bounce
-  .sk-child.sk-bounce1
-  .sk-child.sk-bounce2
-  .sk-child.sk-bounce3
+.text-center
+  .spinner-border(role="status")
