--- a/client/src/app/users/form.component.pug
+++ b/client/src/app/users/form.component.pug
@@ -3,7 +3,7 @@ am-navbar
 am-spinner(*ngIf="isLoading")
 .container(*ngIf="!isLoading && user")
   h2
-    span(*ngIf="userId") Edit User {{ user.name }}
+    span(*ngIf="userId") Edit User
     span(*ngIf="!userId") Create User
     hr
 
@@ -16,8 +16,8 @@ am-spinner(*ngIf="isLoading")
           name="name"
           type="text"
           placeholder="Name"
-          #name="ngModel"
           required="true"
+          #name="ngModel"
           '[(ngModel)]'="user.name"
           '[disabled]'="isSaving"
           '[ngClass]'="{ 'is-invalid': name.invalid && (name.dirty || name.touched)}"
