--- a/client/src/app/_shared/navbar.component.pug
+++ b/client/src/app/_shared/navbar.component.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
+nav.navbar.navbar-expand-sm.navbar-dark.bg-dark
   a.navbar-brand(routerLink="/") MEAN starter
   button.navbar-toggler(
     type="button"
